--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Essi Akpevwe Praise   <essiakpevwepraise@gmail.com>
+Givens Emmah Abraham <givens.abraham@live.com>
